# gigs

./: .gitignore  pyproject.toml
gigs/: CONSTANTS.py  build_tables.py  send_email.py  utils.py
gigs/scrapers/: century.py  eventbrite.py  moshtix.py  moshtix_cache.py  moshtix_parse.py  moshtix_price.py  moshtix_venue.py  oztix.py  phoenix.py  sydney_opera_house.py  sydney_opera_house_price.py  ticketek.py  ticketmaster.py  webscraper.py
project/: charlotte.py  clean.py  compile.py  compile_data.py  email_body.py  email_funcs.py  main.py  opera.py  spider.py  ticketek.py
