[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["mintydevdaz <mintydevdaz@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.8.0"
lxml = "^4.9.2"
requests = "^2.28.2"
pandas = "^1.5.3"
pretty-html-table = "^0.9.16"
python-dotenv = "^0.21.1"
beautifulsoup4 = "^4.11.2"
openpyxl = "^3.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
